# Narendran_EnC_Inductions

./: README.md
PCB/: 2Q  header
PCB/1Q/: TCA9548A Breakout Board.kicad_mod  TCA9548A I2C (Kratos).bak  TCA9548A I2C (Kratos).kicad_sym
PCB/2Q/: ESP32S3_Breakout.kicad_pcb  ESP32S3_Breakout.kicad_prl  ESP32S3_Breakout.kicad_pro  ESP32S3_Breakout.kicad_sch  fp-info-cache
PCB/3Q/: PDB Kratos.kicad_pcb  PDB Kratos.kicad_prl  PDB Kratos.kicad_pro  PDB Kratos.kicad_sch  Under construction  fp-info-cache
PCB/lib/: 20A Buck.kicad_mod  5A Buck.kicad_mod
ROS2_Assignments/: README.md
ROS2_Assignments/src/arm_humble/launch/: display.launch.py
ROS2_Assignments/src/kratos_naren_msgs/: CMakeLists.txt
ROS2_Assignments/src/kratos_naren_msgs/src/: rover_custom_publisher.py  rover_custom_subscriber.py
ROS2_Assignments/src/week4_rover_control/scripts/: double_ackermann.py
Week3_Assignments/: README.md
Week3_Assignments/src/arm_humble/: CMakeLists.txt
Week3_Assignments/src/arm_humble/scripts/: ik_controller.py
Week3_Assignments/src/kratos_naren/: CMakeLists.txt  package.xml
Week3_Assignments/src/kratos_naren/src/: rover_status_publisher.py  rover_status_subscriber.py
Week3_Assignments/src/kratos_naren_msgs/: package.xml
Week3_Assignments/src/kratos_naren_msgs/launch/: bringup.launch.py
